.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
14:27:05 **** Rebuild of configuration Debug for project exam ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\examp_1.o" "..\\src\\examp_1.c" 
..\src\examp_1.c:13:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
g++ -o exam.exe "src\\examp_1.o" 
Info: Nothing to build for exam
14:27:18 **** Incremental Build of configuration Debug for project exam ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\examp_1.o" "..\\src\\examp_1.c" 
..\src\examp_1.c:13:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
g++ -o exam.exe "src\\examp_1.o" 
14:27:37 **** Incremental Build of configuration Debug for project exam ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\examp_1.o" "..\\src\\examp_1.c" 
g++ -o exam.exe "src\\examp_1.o" 
14:28:12 **** Incremental Build of configuration Debug for project exam ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\examp_1.o" "..\\src\\examp_1.c" 
..\src\examp_1.c:13:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
g++ -o exam.exe "src\\examp_1.o" 
14:28:25 **** Incremental Build of configuration Debug for project exam ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\examp_1.o" "..\\src\\examp_1.c" 
..\src\examp_1.c:13:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
g++ -o exam.exe "src\\examp_1.o" 
14:28:41 **** Incremental Build of configuration Debug for project exam ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\examp_1.o" "..\\src\\examp_1.c" 
..\src\examp_1.c:13:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
..\src\examp_1.c: In function 'main':
..\src\examp_1.c:16:13: error: empty character constant
  char key = '';
             ^~
14:29:00 **** Incremental Build of configuration Debug for project exam ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\examp_1.o" "..\\src\\examp_1.c" 
..\src\examp_1.c:13:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
g++ -o exam.exe "src\\examp_1.o" 
14:29:08 **** Incremental Build of configuration Debug for project exam ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\examp_1.o" "..\\src\\examp_1.c" 
..\src\examp_1.c:13:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
g++ -o exam.exe "src\\examp_1.o" 
14:29:16 **** Incremental Build of configuration Debug for project exam ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\examp_1.o" "..\\src\\examp_1.c" 
..\src\examp_1.c:13:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
g++ -o exam.exe "src\\examp_1.o" 
14:33:06 **** Incremental Build of configuration Debug for project exam ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\exam_2.o" "..\\src\\exam_2.c" 
..\src\exam_2.c:15:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
g++ -o exam.exe "src\\exam_2.o" 
14:37:50 **** Incremental Build of configuration Debug for project exam ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\exam_3.o" "..\\src\\exam_3.c" 
..\src\exam_3.c:13:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
g++ -o exam.exe "src\\exam_3.o" 
14:41:23 **** Incremental Build of configuration Debug for project exam ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\exam_3-2.o" "..\\src\\exam_3-2.c" 
..\src\exam_3-2.c:13:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
g++ -o exam.exe "src\\exam_3-2.o" 
Info: Nothing to build for exam
Info: Nothing to build for exam
Info: Nothing to build for exam
Info: Nothing to build for exam
Info: Nothing to build for exam
14:42:47 **** Incremental Build of configuration Debug for project exam ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\exam_3-2.o" "..\\src\\exam_3-2.c" 
..\src\exam_3-2.c:13:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
g++ -o exam.exe "src\\exam_3-2.o" 
Info: Nothing to build for exam
Info: Nothing to build for exam
Info: Nothing to build for exam
14:47:12 **** Incremental Build of configuration Debug for project exam ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\exam_3-3.o" "..\\src\\exam_3-3.c" 
..\src\exam_3-3.c:13:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
g++ -o exam.exe "src\\exam_3-3.o" 
14:47:37 **** Incremental Build of configuration Debug for project exam ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\exam_3-3.o" "..\\src\\exam_3-3.c" 
..\src\exam_3-3.c:13:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
g++ -o exam.exe "src\\exam_3-3.o" 
Info: Nothing to build for exam
14:48:13 **** Incremental Build of configuration Debug for project exam ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\exam_3-3.o" "..\\src\\exam_3-3.c" 
..\src\exam_3-3.c:13:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
g++ -o exam.exe "src\\exam_3-3.o" 
14:59:23 **** Incremental Build of configuration Debug for project exam ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\exam4.o" "..\\src\\exam4.c" 
..\src\exam4.c:13:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
g++ -o exam.exe "src\\exam4.o" 
